--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,10 @@
       />
       <button type="submit">Search</button>
     </form>
-    <div class="gallery">
+    <div class="container">
+      <div class="gallery"></div>
+      <button type="button" class="load-more is-hidden">Load more</button>
     </div>
-    <button type="button" class="load-more is-hidden">Load more</button>
     <script src="./js/index.js" type="module"></script>
   </body>
 </html>
